styles/input.css
/* ... */
        #site-header__row {
            width: 100%;
            max-width: var(--max-content-width);
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: space-between;
            padding: var(--frame-padding);
            gap: var(--spacing-regular);
        }

        @media screen and (min-width: 768px) {
            #site-header__row {
                flex-direction: row;
            }
        }

        #site-header__site-title {
            display: flex;
            flex-direction: column;
            align-items: center;
            gap: var(--spacing-regular);
        }

        @media screen and (min-width: 450px) {
            #site-header__site-title {
                flex-direction: row;
            }
        }

        #site-header__site-logo-type {
            display: block;
            width: auto;
            height: var(--spacing-regular);
        }

        #site-header__site-logo-type .st0 {
            fill: var(--brand-color-1);
        }

        #site-header__site-logo-type .st1 {
            fill: var(--brand-color-2);
        }

        #site-header__site-logo-mark {
            display: block;
            width: auto;
            height: var(--spacing-medium);
        }

        #site-header__site-logo-mark .st0 {
            fill: var(--brand-color-1);
        }

        #site-header__site-logo-mark .st1 {
            fill: var(--brand-color-2);
        }


        /**
         * Site Nav
         * ----------------------------------------------------------------
         */

        #site-nav {
            display: flex;
            align-items: center;
            justify-content: center;
        }

        #site-nav__menu {
            display: flex;
            align-items: center;
            list-style: none;
            gap: 1rem;
            margin: 0;
            padding: 0;
        }

        .site-nav__link {
            text-decoration: none;
            font-family: var(--heading-small-font-family);
            font-size: var(--heading-small-font-size);
            font-weight: var(--heading-small-font-weight);
            letter-spacing: var(--heading-small-letter-spacing);
        }

        #site-nav__dark-mode-toggle-trigger {
            border: 0;
            background: none;
        }

        #site-nav__dark-mode-toggle-light {
            fill: var(--link-color);
        }

        #site-nav__dark-mode-toggle-dark {
            fill: var(--link-color);
        }

        @media (prefers-color-scheme: light) {
            #site-nav__dark-mode-toggle-light {
                display: none;
            }
        }

        @media (prefers-color-scheme: dark) {
            #site-nav__dark-mode-toggle-dark {
                display: none;
            }
        }


        /**
         * Site Footer
         * ----------------------------------------------------------------
         */

        #site-footer {
            display: flex;
            justify-content: center;
        }

        #site-footer__row {
            width: 100%;
            max-width: var(--max-content-width);
            display: flex;
            align-items: center;
            justify-content: center;
            padding: var(--frame-padding);
        }

        #site-footer__details {
            display: flex;
            list-style: none;
            flex-direction: column;
            gap: var(--spacing-small);
            margin: 0;
            padding: 0;
        }

        @media (min-width: 768px) {
            #site-footer__details {
                flex-direction: row;
                gap: 0;
            }
        }

        .site-footer__detail {
            text-align: center;
        }

        .site-footer__detail {
            font-family: var(--heading-tiny-font-family);
            font-size: var(--heading-tiny-font-size);
            font-weight: var(--heading-tiny-font-weight);
            letter-spacing: var(--heading-tiny-letter-spacing);
        }

        @media (min-width: 768px) {
            .site-footer__detail + .site-footer__detail:before {
                content: "|";
                padding: 0 var(--spacing-small);
                color: var(--framework-color)
            }
        }

        .site-footer__detail a {
            color: var(--brand-color-1);
        }


        /**
         * Components
         * ----------------------------------------------------------------
         */

        .button {
            border: 2px solid;
            padding: var(--button-padding-vert) var(--button-padding-horz);
            font-family: var(--heading-small-font-family);
            font-size: var(--heading-small-font-size);
            font-weight: var(--heading-small-font-weight);
            letter-spacing: var(--heading-small-letter-spacing);
            display: inline-block;
        }

        .post-card {
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
            width: 100%;
            position: relative;
        }
        .post-card__underlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            z-index: -0;
            mix-blend-mode: luminosity;
            opacity: 0.25;
            object-fit: cover;
        }
        .post-card__layout {
            padding: var(--frame-padding);
            display: flex;
            flex-direction: column;
            align-content: flex-end;
            z-index: 1;
        }

        .post-card__image {
            aspect-ratio: 16/9;
            display: block;
            object-fit: cover;
            width: 100%;
            height: auto;
            margin-bottom: var(--spacing-regular);
        }
/* ... */

